--- a/index.html
+++ b/index.html
@@ -5,19 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto Login</title>
+    <!--link icone user-->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+    <!--link icone pass-->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+
     <link rel="stylesheet" href="estilos/style.css" />
+
+    <link rel="stylesheet" href="estilos/media-query.css" />
   </head>
   <body>
     <main>
       <section id="login">
-        <div id="imagem">Foto</div>
+        <div id="imagem"></div>
         <div id="formulario">
           <h1>Login</h1>
           <p>
             Seja bem-vindo(a) novamente. Faça login para acessar sua conta e
             poder fazer as configurações no seu ambiente.
           </p>
-          <form action="login.php" method="post"></form>
+          <form action="login.php" method="post">
+            <div id="campo">
+              <span class="material-symbols-outlined"> person </span>
+              <input
+                type="text"
+                name="user"
+                id="user"
+                placeholder="seu e-mail"
+              />
+            </div>
+
+            <div id="campo">
+              <span class="material-symbols-outlined"> key </span>
+              <input
+                type="password"
+                name="pass"
+                id="pass"
+                placeholder="sua senha"
+              />
+            </div>
+
+            <input id="submit" type="submit" value="Entrar" />
+
+            <input id="esqsenha" type="button" value="Esqueci a senha" /><a
+              href="#"
+            ></a>
+          </form>
         </div>
       </section>
     </main>
